# develop-inator

./: .env.example  .gitignore  README.md  pyproject.toml
evals/: dataset.json  run_eval.py
evals/dummy_react_app/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
evals/dummy_react_app/src/: App.jsx  index.css
evals/dummy_react_app/src/components/: Auth.jsx  Counter.jsx  Header.jsx  MathUtils.jsx  TodoList.jsx  UserProfile.jsx
evals/dummy_react_app/src/components/__tests__/: Auth.test.jsx  Counter.test.jsx  Header.test.jsx  MathUtils.test.jsx  TodoList.test.jsx  UserProfile.test.jsx
scripts/: index_codebase.py
slack_bot_backend/: __init__.py  celery_app.py  config.py  dependencies.py  logging.py  main.py
slack_bot_backend/api/: routes.py
slack_bot_backend/models/: __init__.py  action.py  intent.py  persistence.py  question.py  slack.py
slack_bot_backend/services/: anthropic_llm.py  github.py  indexer.py  interfaces.py  openai_llm.py  openviking_context.py  routing_llm.py  slack_web_api.py  stubs.py  supabase_persistence.py
slack_bot_backend/workflows/: __init__.py  action.py  configure.py  intent.py  question.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260320164500_slack_bot_persistence.sql  20260322000000_active_pull_requests.sql  20260325000000_add_pending_request.sql
tests/: test_action.py  test_app.py  test_config.py  test_dependencies.py  test_indexer_chunking.py  test_intent.py  test_question.py  test_supabase_persistence.py  test_supabase_schema.py
