[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "slack-bot-backend"
version = "0.1.0"
description = "Foundational FastAPI scaffold for the Slack bot backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.6.2",
  "fastapi>=0.115,<1.0",
  "langgraph>=1.1.3",
  "openhands>=0.0.0",
  "python-dotenv>=1.0,<2.0",
  "redis>=7.3.0",
  "tree-sitter>=0.25",
  "tree-sitter-javascript>=0.25",
  "tree-sitter-python>=0.25",
  "tree-sitter-typescript>=0.23",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
]


[tool.uv]
# Pin litellm to avoid aider 0.86.2 crash:
# litellm >=1.81.11 adds PermissionDeniedError which is missing from
# aider's EXCEPTIONS list, causing ValueError on every run.
# Remove this constraint once aider is updated past 0.86.2.
constraint-dependencies = [
  "litellm<1.81.11",
]